--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,7 +41,7 @@
         "no-unused-vars": "warn",
         "eqeqeq": ["error", "always"],
         "indent": ["error", 2],
-        "linebreak-style": ["error", "unix"],
+        "linebreak-style": ["error", "windows"],
         "quotes": ["error", "single"],
         "semi": ["error", "always"]
       }
